--- a/asf/docker-compose.yml
+++ b/asf/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     container_name: asf
     volumes:
       - asf_data:/app/config
+    ports:
+      - 1242:1242
 
 volumes:
   asf_data:
