--- a/minecraft-bedrock/docker-compose.yml
+++ b/minecraft-bedrock/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   minecraft-bedrock:
     image: itzg/minecraft-bedrock-server
-    image_name: minecraft-bedrock
+    container_name: minecraft-bedrock
     environment:
       EULA: "TRUE"
     ports:
